Renderer aborts in some cases when rendering only meta-objects with volume materials. #20023

Closed
opened 2009-11-25 16:20:50 +01:00 by Colomban Wendling · 7 comments

%%%Blender's internal renderer aborts in some cases when rendering only meta-objects with volume materials with the following error:
blender: source/blender/render/intern/source/rayshade.c:242: makeraytree_object: Assertion `faces > 0' failed.

How to reproduce?

  1. Remove all meshes (e.g. the default cube);
  2. Add a meta-object, for example a meta-ball;
  3. Add a material to this meta-ball, and set it to "volume" mode;
  4. Duplicate this meta-ball (Maj+D) and move it a little.
  5. Hit F12 to start rendering.

What happens?
Blender closes with the above error.

What's expected?
The render to complete cleanly and render 2 meta-balls with volume materials.

Does it happen every time?
Yes; but it doesn't happen when adding only one meta-ball.

OS: Debian GNU/Linux Sid
Blender: bf-blender/trunk/blender@24889
GC: nVidia GeForce 8600GT
OpenGL/Driver: 3.2.0 NVIDIA 190.42%%%

%%%Blender's internal renderer aborts in some cases when rendering only meta-objects with volume materials with the following error: blender: source/blender/render/intern/source/rayshade.c:242: makeraytree_object: Assertion `faces > 0' failed. How to reproduce? 1) Remove all meshes (e.g. the default cube); 2) Add a meta-object, for example a meta-ball; 3) Add a material to this meta-ball, and set it to "volume" mode; 4) Duplicate this meta-ball (Maj+D) and move it a little. 5) Hit F12 to start rendering. What happens? Blender closes with the above error. What's expected? The render to complete cleanly and render 2 meta-balls with volume materials. Does it happen every time? Yes; but it doesn't happen when adding only one meta-ball. OS: Debian GNU/Linux Sid Blender: bf-blender/trunk/blender@24889 GC: nVidia GeForce 8600GT OpenGL/Driver: 3.2.0 NVIDIA 190.42%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Oops, forgot to mention I'm running 64bits Linux.%%%

%%%Oops, forgot to mention I'm running *64bits* Linux.%%%
Member

%%%Fix in svn, thanks!%%%

%%%Fix in svn, thanks!%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Huh... I'm sorry but the error it still present for me- [x], even after cleaning and rebuilding the whole source tree (@24921).
I build the SVN using scons, if it is related.

  • yeah, even with the attacher sample file.%%%
%%%Huh... I'm sorry but the error it still present for me- [x], even after cleaning and rebuilding the whole source tree (@24921). I build the SVN using scons, if it is related. - [x] yeah, even with the attacher sample file.%%%
Member

%%%Oops, that was really dumb of me, I made the fix, then disabled the fix in order to test it was fixing the right thing. Looks I forgot to enable the fix again before committing :)

should be ok now, sorry about that!%%%

%%%Oops, that was really dumb of me, I made the fix, then disabled the fix in order to test it was fixing the right thing. Looks I forgot to enable the fix again before committing :) should be ok now, sorry about that!%%%

%%%Yeah, this times it works!%%%

%%%Yeah, this times it works!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#20023
No description provided.