Fix for [#20023] Renderer aborts in some cases when rendering only meta-objects with volume materials.

When metaballs were added to the render, if they weren't the basis ball, they'd be skipped, leaving a render object with no geometry. Now it doesn't add an object in the first place.